--- a/install
+++ b/install
@@ -8,3 +8,4 @@ Bash. Please migrate to the following command:
 EOS
 
 Kernel.exec "/bin/bash", "-c", '/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"'
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
